<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_lg"
    android:paddingBottom="@dimen/space_xl">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_lg"
        android:background="@drawable/bg_sheet_handle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_sm"
        android:text="@string/set_target_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/rowHome"
        style="@style/SheetRow">

        <ImageView style="@style/SheetRowIcon" android:src="@drawable/ic_home_screen" />

        <TextView style="@style/SheetRowLabel" android:text="@string/set_target_home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowLock"
        style="@style/SheetRow">

        <ImageView style="@style/SheetRowIcon" android:src="@drawable/ic_lock_screen" />

        <TextView style="@style/SheetRowLabel" android:text="@string/set_target_lock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowBoth"
        style="@style/SheetRow">

        <ImageView style="@style/SheetRowIcon" android:src="@drawable/ic_both_screen" />

        <TextView style="@style/SheetRowLabel" android:text="@string/set_target_both" />
    </LinearLayout>
</LinearLayout>
