<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivWallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_wallpaper_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_margin="@dimen/space_lg"
        android:background="@drawable/bg_circle_scrim"
        android:contentDescription="@string/cd_back"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/imageProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actionBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_xl"
        app:cardBackgroundColor="@color/bg_elevated"
        app:cardCornerRadius="@dimen/radius_xl"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_md">

            <FrameLayout
                android:id="@+id/actionShare"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_action_circle"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_share"
                    android:src="@drawable/ic_share"
                    app:tint="@color/text_primary" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/actionDownload"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/space_md"
                android:background="@drawable/bg_action_circle"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_download"
                    android:src="@drawable/ic_download"
                    app:tint="@color/text_primary" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/actionFavorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/space_md"
                android:background="@drawable/bg_action_circle"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_favorite"
                    android:src="@drawable/ic_favorite_border"
                    app:tint="@color/text_primary" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/actionSet"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="@dimen/space_md"
                android:layout_weight="1"
                android:background="@drawable/bg_button_primary"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/cd_set_wallpaper"
                    android:src="@drawable/ic_image"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_sm"
                    android:text="@string/action_set_wallpaper"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_body"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
