<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient">

    <!-- Soft radial glow behind the icon -->
    <View
        android:id="@+id/splashGlow"
        android:layout_width="@dimen/_320sdp"
        android:layout_height="@dimen/_320sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_72sdp"
        android:background="@drawable/bg_splash_glow" />

    <LinearLayout
        android:id="@+id/splashContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivSplashLogo"
            android:layout_width="@dimen/_118sdp"
            android:layout_height="@dimen/_118sdp"
            android:contentDescription="@string/cd_app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            app:shapeAppearanceOverlay="@style/RoundedIconShape"
            app:strokeColor="#33FFFFFF"
            app:strokeWidth="@dimen/_1sdp" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:letterSpacing="0.03"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_28ssp"
            android:textStyle="bold" />

        <!-- Gradient accent underline -->
        <View
            android:layout_width="@dimen/_46sdp"
            android:layout_height="@dimen/_4sdp"
            android:layout_marginTop="@dimen/space_md"
            android:background="@drawable/bg_primary_pill" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:alpha="0.8"
            android:letterSpacing="0.01"
            android:text="@string/app_tagline"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/splashProgress"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_56sdp"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        app:trackColor="#33FFFFFF"
        app:trackCornerRadius="@dimen/_4sdp"
        app:trackThickness="@dimen/_4sdp" />

</FrameLayout>
